--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=springmart
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/springmart
+spring.datasource.url=jdbc:mysql://localhost:3306/springmart
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
