finished admin routes

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=springmart
+upload.dir=/home/pol/projects/springmart/uploads/images
 
 spring.datasource.url=jdbc:mysql://localhost:3306/springmart
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
